// Standard gRPC Service Definition Template
//
// Usage:
//   1. Copy this template to your protos/ directory
//   2. Rename to your_service.proto
//   3. Update package name and service definitions
//   4. Generate code with: python -m grpc_tools.protoc -I./protos --python_out=. --pyi_out=. --grpc_python_out=. ./protos/your_service.proto
//
// Best Practices:
//   - Use proto3 syntax (NOT proto2)
//   - Package name: {domain}.{service}.v{version}
//   - One service per file for maintainability
//   - Import google well-known types for common patterns
//   - Use oneof for polymorphic fields
//   - Add comments for documentation generation

syntax = "proto3";

package example.v1;

// Python package path for generated code
option python_package = "app.protos.example_v1";

// Go package (for polyglot environments)
option go_package = "github.com/example/api/example/v1;examplev1";

// Java package
option java_package = "com.example.api.example.v1";
option java_multiple_files = true;

// Google well-known types (common patterns)
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
import "google/protobuf/wrappers.proto";

// ============================================================================
// SERVICE DEFINITION
// ============================================================================

// ExampleService provides CRUD operations for Example resources.
//
// All methods follow standard gRPC patterns:
// - Unary: Single request, single response
// - Server streaming: Single request, stream of responses
// - Client streaming: Stream of requests, single response
// - Bidirectional: Stream of requests, stream of responses
service ExampleService {
  // ---- Unary RPCs ----

  // GetExample returns a single example by ID.
  // Returns NOT_FOUND if the example doesn't exist.
  rpc GetExample(GetExampleRequest) returns (Example);

  // CreateExample creates a new example.
  // Returns ALREADY_EXISTS if an example with the same unique field exists.
  rpc CreateExample(CreateExampleRequest) returns (Example);

  // UpdateExample updates an existing example.
  // Supports partial updates via field_mask.
  // Returns NOT_FOUND if the example doesn't exist.
  rpc UpdateExample(UpdateExampleRequest) returns (Example);

  // DeleteExample soft-deletes an example.
  // Returns NOT_FOUND if the example doesn't exist.
  // Idempotent: calling on deleted example returns success.
  rpc DeleteExample(DeleteExampleRequest) returns (google.protobuf.Empty);

  // ---- Server Streaming RPCs ----

  // ListExamples returns a stream of examples matching the filter.
  // Use for large result sets that should be processed incrementally.
  rpc ListExamples(ListExamplesRequest) returns (stream Example);

  // WatchExamples streams real-time updates for matching examples.
  // Clients receive updates as examples are created/modified/deleted.
  rpc WatchExamples(WatchExamplesRequest) returns (stream ExampleEvent);

  // ---- Client Streaming RPCs ----

  // BulkCreateExamples creates multiple examples from a stream.
  // Returns a summary of created/failed items.
  rpc BulkCreateExamples(stream CreateExampleRequest) returns (BulkCreateResponse);

  // ---- Bidirectional Streaming RPCs ----

  // SyncExamples provides bidirectional sync between client and server.
  // Client sends local changes, server responds with remote changes.
  rpc SyncExamples(stream SyncRequest) returns (stream SyncResponse);
}

// ============================================================================
// RESOURCE MESSAGES
// ============================================================================

// Example is the main resource for this service.
message Example {
  // Unique identifier (UUID format recommended).
  // Output only - generated by server on creation.
  string id = 1;

  // Human-readable name.
  // Must be unique within a namespace.
  string name = 2;

  // Optional description.
  string description = 3;

  // Current status of the example.
  ExampleStatus status = 4;

  // Custom metadata as key-value pairs.
  map<string, string> labels = 5;

  // Nested configuration.
  ExampleConfig config = 6;

  // List of tags (max 10).
  repeated string tags = 7;

  // Creation timestamp (output only).
  google.protobuf.Timestamp created_at = 8;

  // Last update timestamp (output only).
  google.protobuf.Timestamp updated_at = 9;

  // Soft delete timestamp (output only, null if not deleted).
  google.protobuf.Timestamp deleted_at = 10;

  // Version for optimistic concurrency control.
  int64 version = 11;
}

// ExampleStatus represents the lifecycle state.
// Always use UNSPECIFIED as 0 for forward compatibility.
enum ExampleStatus {
  EXAMPLE_STATUS_UNSPECIFIED = 0;
  EXAMPLE_STATUS_PENDING = 1;
  EXAMPLE_STATUS_ACTIVE = 2;
  EXAMPLE_STATUS_INACTIVE = 3;
  EXAMPLE_STATUS_DELETED = 4;
}

// ExampleConfig contains nested configuration.
message ExampleConfig {
  // Whether the feature is enabled.
  bool enabled = 1;

  // Maximum number of items.
  int32 max_items = 2;

  // Timeout duration.
  google.protobuf.Duration timeout = 3;

  // Priority level (0-100).
  int32 priority = 4;

  // Optional retry configuration.
  RetryConfig retry = 5;
}

// RetryConfig for retry behavior.
message RetryConfig {
  int32 max_attempts = 1;
  google.protobuf.Duration initial_delay = 2;
  google.protobuf.Duration max_delay = 3;
  double multiplier = 4;
}

// ============================================================================
// REQUEST/RESPONSE MESSAGES
// ============================================================================

// ---- Get ----

message GetExampleRequest {
  // Required: ID of the example to retrieve.
  string id = 1;

  // Optional: Include deleted examples.
  bool include_deleted = 2;
}

// ---- Create ----

message CreateExampleRequest {
  // Required: Name for the new example.
  string name = 1;

  // Optional: Description.
  string description = 2;

  // Optional: Labels.
  map<string, string> labels = 3;

  // Optional: Tags.
  repeated string tags = 4;

  // Optional: Initial configuration.
  ExampleConfig config = 5;

  // Optional: Idempotency key to prevent duplicate creation.
  // If provided, duplicate requests with same key return the original.
  string idempotency_key = 6;
}

// ---- Update ----

message UpdateExampleRequest {
  // Required: ID of the example to update.
  string id = 1;

  // Fields to update (use field_mask to specify which).
  Example example = 2;

  // Which fields to update. If empty, all provided fields are updated.
  // Example: ["name", "description", "config.enabled"]
  google.protobuf.FieldMask update_mask = 3;

  // Optional: Expected version for optimistic concurrency.
  // If provided and doesn't match, returns ABORTED.
  google.protobuf.Int64Value expected_version = 4;
}

// ---- Delete ----

message DeleteExampleRequest {
  // Required: ID of the example to delete.
  string id = 1;

  // If true, permanently delete (not soft delete).
  bool permanent = 2;
}

// ---- List (Server Streaming) ----

message ListExamplesRequest {
  // Maximum items per page (default: 100, max: 1000).
  int32 page_size = 1;

  // Pagination token from previous response.
  string page_token = 2;

  // Filter by status.
  ExampleStatus status_filter = 3;

  // Filter by label key-value pairs.
  map<string, string> label_filter = 4;

  // Free-text search query.
  string query = 5;

  // Sort order.
  SortOrder order_by = 6;

  // Include soft-deleted items.
  bool include_deleted = 7;
}

message SortOrder {
  // Field to sort by (e.g., "created_at", "name").
  string field = 1;

  // Sort direction.
  bool descending = 2;
}

// ---- Watch (Server Streaming) ----

message WatchExamplesRequest {
  // Optional: Only watch examples matching this filter.
  ListExamplesRequest filter = 1;

  // Optional: Resume from this point (from previous watch).
  string resume_token = 2;
}

message ExampleEvent {
  // Type of event.
  EventType type = 1;

  // The affected example.
  Example example = 2;

  // Token to resume from this point.
  string resume_token = 3;

  // When the event occurred.
  google.protobuf.Timestamp event_time = 4;
}

enum EventType {
  EVENT_TYPE_UNSPECIFIED = 0;
  EVENT_TYPE_CREATED = 1;
  EVENT_TYPE_UPDATED = 2;
  EVENT_TYPE_DELETED = 3;
}

// ---- Bulk Create (Client Streaming) ----

message BulkCreateResponse {
  // Number of successfully created items.
  int32 created_count = 1;

  // Number of failed items.
  int32 failed_count = 2;

  // IDs of created items.
  repeated string created_ids = 3;

  // Details of failures.
  repeated BulkError errors = 4;
}

message BulkError {
  // Index in the input stream (0-based).
  int32 index = 1;

  // Error code.
  string code = 2;

  // Human-readable error message.
  string message = 3;
}

// ---- Sync (Bidirectional Streaming) ----

message SyncRequest {
  oneof request {
    // Subscribe to changes for specific examples.
    SyncSubscribe subscribe = 1;

    // Unsubscribe from specific examples.
    SyncUnsubscribe unsubscribe = 2;

    // Push a local change to the server.
    SyncPush push = 3;

    // Acknowledge receipt of a server change.
    SyncAck ack = 4;
  }
}

message SyncSubscribe {
  repeated string example_ids = 1;
}

message SyncUnsubscribe {
  repeated string example_ids = 1;
}

message SyncPush {
  Example example = 1;
  int64 client_version = 2;
}

message SyncAck {
  string sync_id = 1;
}

message SyncResponse {
  oneof response {
    // Server pushing a change to the client.
    SyncChange change = 1;

    // Confirmation of client push.
    SyncConfirm confirm = 2;

    // Conflict detected.
    SyncConflict conflict = 3;
  }
}

message SyncChange {
  string sync_id = 1;
  Example example = 2;
  EventType type = 3;
}

message SyncConfirm {
  string example_id = 1;
  int64 server_version = 2;
}

message SyncConflict {
  string example_id = 1;
  Example client_version = 2;
  Example server_version = 3;
}

// ============================================================================
// HEALTH CHECK (Standard gRPC health checking protocol)
// ============================================================================
// Note: Import grpc/health/v1/health.proto for standard health checks
// or use grpc_health module in Python

// ============================================================================
// ERROR DETAILS (For rich error responses)
// ============================================================================
// Use google.rpc.Status with google.rpc.BadRequest, etc. for rich errors
// See: google/rpc/error_details.proto
